--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <link rel="stylesheet" type="text/css" href="">
 </head>
 <body>
-  <script src="chardelay.js"></script>
+  <script src="js/chardelay.js"></script>
 </body>
 </html>
