Refactored to reusable module; updated all files

--- a/index.html
+++ b/index.html
@@ -2,10 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <title>chardelay.js : Delay Appearance of Each Character Displayed</title>
-    <link rel="stylesheet" type="text/css" href="">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
+
 </head>
 <body>
+	<div id="container" class="hldr"></div>
+
+	<span>Lorem ipsum</span>
+
   <script src="js/chardelay.js"></script>
+  <script>
+  	function start(){
+  			var str = 'You are a slave. Like everyone else, you were born into bondage, born into a prison that you cannot smell or taste or touch. A prison...for your mind...Unfortunatly, no one can be..._told_ what the Matrix is...you have to see it for yourself.';
+
+  			var s1 = ["Alvin", 1, "Simon", 2, "Theodore", 3];
+			var o1 = {"Alvin": 1, "Simon": 2, "Theodore": 3}; // This will fail because wrong type: object
+			var s2 = "I am a happy string.";
+			//var myCD = Chardelay(s1,"h", 500);
+			//var myCD = new Chardelay();
+			//var myCD = Chardelay(s2,"v",215,"div", 4, 7, "u");
+			//var myCD = Chardelay(str);
+			//var myCD = Chardelay(str,{"parentEl": document.getElementById("test")});
+			///*
+			var myCD1 = Chardelay(str,{
+			                "layout": "h",
+			                "delay": 45,
+			                "inElement": "span",
+			                "css": "terminal",
+			                "parentEl": "container"
+			               });
+			
+			//*/
+  	}
+    /*
+     * For older browsers to ensure js is loaded 
+     * Snippet copied from :
+     * http://www.javascriptkit.com/dhtmltutors/domready.shtml
+     */
+  	if (document.addEventListener) {
+  		document.addEventListener("DOMContentLoaded", start(), false)
+  	} else if (document.all && !window.opera){
+	  document.write('<script type="text/javascript" id="contentloadtag" defer="defer" src="javascript:void(0)"><\/script>')
+	  var contentloadtag=document.getElementById("contentloadtag")
+	  contentloadtag.onreadystatechange=function(){
+		    if (this.readyState=="complete"){
+		      alreadyrunflag=1
+		      start()
+		    }
+		}
+	}
+  </script>
 </body>
 </html>
