--- a/index.html
+++ b/index.html
@@ -3,33 +3,51 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>chardelay.js : Delay Appearance of Each Character Displayed</title>
+    <title>Chardelay.js : Delay Appearance of Content Displayed</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 	<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
 </head>
 <body>
+	<h1>Chardelay.js</h1>
+	<p>Be sure to check the source of this page</p>
 	<div id="container" class="hldr"></div>
-  <!-- The span below is for you to play Chardelay around with placement around other elements -->
-	<span>Lorem ipsum</span>	
-	<div class="thing"></div>
+
   <script src="js/chardelay.js"></script>
   <script>
   	function start(){
-  		/* Different content to pass */
+  		/**************************** 
+  		 *Different content to pass */
+  		 
 		var str = 'You are a slave. Like everyone else, you were born into bondage, born into a prison that you cannot smell or taste or touch. A prison...for your mind...Unfortunatly, no one can be..._told_ what the Matrix is...you have to see it for yourself.';
 		var s2 = "1234";
 		var s3 = ['<img src="http://i.imgur.com/ZQDT6QT.gif" width="248" height="180" />', '<img src="http://i.imgur.com/j2CWMG7.gif" width="248" height="180" />', '<img src="http://i.imgur.com/rfllNHS.gif" width="248" height="180" />', '<img src="http://i.imgur.com/UWJdcbd.gif" width="248" height="180" />']
-  		var arr = ["Alvin", 1, "Simon", 2, "Theodore", 3];
-		var o1 = {"Alvin": 1, "Simon": 2, "Theodore": 3}; // This will fail because wrong type: object
+  		var arr = [1, "Alvin", 2, "Simon", 3, "Theodore"];
+		var o1 = {1: "Alvin", 2: "Simon", 3: "Theodore"}; // This will fail because wrong type: object
 		
-		//var myCD = Chardelay(s2,"", "h", 500);
+		/************************************
+		 * Different instances to test with */
+		
+		/* Minumum allowed to create an instance - we need to have some content to display */
 		//var myCD = new Chardelay(s2);
-		/* The below has wrong argument types for options to show that it won't fail, but use defaults will be used instead */
-		//var myCD = Chardelay(arr, $(".hldr"), "q", 415,"a", 4, true, "u"); 
-		var myCD = Chardelay(s2, {"layout": "v", "css": "other", "parentEl": document.querySelector(".hldr")});
+		
+		/* Empty strings are ignored */
+		//var myCD = Chardelay(s2,"", "h", 500);
+		
+		/* Wrong argument types for options won't fail, defaults will be used instead
+		 * Also displaying typical array-based arguments instead of passing an optional parameters object
+		 */
+		//var myCD = Chardelay(arr, $(".hldr"), "q", 415,"a", 4, true, "u");
+		
+		/* Displaying ability to take an array of images (WARNING: Potentially NSFW - Archer television show gifs)
+		 * Also displaying how options can be out of order and still work
+		 */
+		var myCD = Chardelay(s3, {"layout": "v", "css": "other", "parentEl": document.querySelector(".hldr"), "multi": true});
 		//var myCD = Chardelay(str,{"parentEl": document.getElementById("container")});
+		
+		/* 
+		 * The robust, easily readable instantiation with all options
 		/*
 		var myCD = Chardelay(str,{
 		                "parentEl": $(".hldr"),
@@ -42,7 +60,7 @@
 		               });
 		
 		//*/
-  	}
+  	} /* END Start */
     $(start);
   </script>
 </body>
