--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a class="github-ribbon" href="https://github.com/seantunwin/chardelay.js" target="_blank"><img src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
         <div class="social">
             <div class="twitter">
-                <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="seantunwin" data-lang="en">Tweet</a>
+                <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="seantunwin" data-lang="en" data-url="http://seantunwin.github.io/chardelay.js" data-text="Chardelay.js - display content items with a delay">Tweet</a>
                 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
             </div>
             <div class="google">
