--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Chardelay.js</title>
-        <meta name="description" content="Chardelay.js, JavaScript library, Delay appearance of content in an HTML web page,Sean T. Unwin">
-        <meta name="author" content="Sean T. Unwin">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Chardelay.js</title>
+    <meta name="description" content="Chardelay.js, JavaScript library, Delay appearance of content in an HTML web page,Sean T. Unwin">
+    <meta name="author" content="Sean T. Unwin">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
-        <link rel="stylesheet"  href="css/shThemeMonokai.css">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/main.min.css">
+    <link rel="stylesheet"  href="css/shThemeMonokai.min.css">
 
-        <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-    </head>
-    <body>
+    <script src="js/vendor/modernizr-2.6.2.min.js"></script>
+</head>
+<body>
     <!--[if lt IE 7]>
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -28,11 +28,9 @@
         <div class="social">
             <div class="twitter">
                 <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="seantunwin" data-lang="en" data-url="http://seantunwin.github.io/chardelay.js" data-text="Chardelay.js - display content items with a delay">Tweet</a>
-                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
             </div>
             <div class="google">
                 <div class="g-plusone"></div>
-                <script>(function() { var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true; po.src = 'https://apis.google.com/js/plusone.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s); })();</script>
             </div>
             <div class="linkdin">
                     <script type="IN/Share" data-counter="right"></script>
@@ -171,21 +169,24 @@
         </section>
     </article> <!-- END #container -->
 
-    <!-- BEGIN Footer -->
     <footer class="ftr-main">
+        <nav class="contact">
+            <a href="mailto:sean.t.unwin@gmail.com" class="contact-link"><span class="icon-paper-plane"></span></a>
+            <a href="https://twitter.com/seantunwin" class="contact-link"><span class="icon-twitter"></span></a>
+            <a href="https://plus.google.com/u/0/106969786385489511025/posts" class="contact-link"><span class="icon-googleplus"></span></a>
+            <a href="http://www.linkedin.com/in/seantunwin" class="contact-link"><span class="icon-linkedin"></span></a>
+            <a href="https://github.com/" class="contact-link"><span class="icon-github"></span></a>
+        </nav>
         <p><span class="copyright">&copy;</span>2013 <a href="https://twitter.com/seantunwin" title="contact me on Twitter">Sean T. Unwin</a></p>
-    </footer>
-    <!-- END Footer -->
-    <!-- BEGIN Scripts -->
+    </footer><!-- END Footer -->
+
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
     <script src="js/vendor/shCore.js" type="text/javascript"></script>
-    <script src="js/vendor/shBrushXml.js" type="text/javascript"></script>
-    <script src="js/vendor/shBrushJScript.js" type="text/javascript"></script>
-    <script src="js/vendor/shBrushCss.js" type="text/javascript"></script>
+    <script src="js/vendor/shBrushes.min.js" type="text/javascript"></script>
 
-    <script src="js/main.js"></script>
-    <script src="js/chardelay.js"></script>
+    <script src="js/main.min.js"></script>
+    <script src="js/chardelay.min.js"></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -194,7 +195,6 @@
 
         ga('create', 'UA-43346101-1', 'seantunwin.github.io');
         ga('send', 'pageview');
-    </script>
-    <!-- END Scripts -->
-    </body>
+    </script><!-- END Scripts -->
+</body>
 </html>
