--- a/index.html
+++ b/index.html
@@ -183,9 +183,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
     <script src="js/vendor/shCore.js" type="text/javascript"></script>
-    <script src="js/vendor/shBrushCss.js" type="text/javascript"></script>
-    <script src="js/vendor/shBrushXml.js" type="text/javascript"></script>
-    <script src="js/vendor/shBrushJscript.js" type="text/javascript"></script>
+    <script src="js/vendor/shBrushes.min.js" type="text/javascript"></script>
 
     <script src="js/main.min.js"></script>
     <script src="js/chardelay.min.js"></script>
