--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
         <a class="github-ribbon" href="https://github.com/seantunwin/chardelay.js" target="_blank"><img src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
         <div class="social">
             <div class="twitter">
-                <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="seantunwin" data-lang="en" data-url="http://seantunwin.github.io/chardelay.js" data-text="Chardelay.js - display content items with a delay"></a>
+                <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="seantunwin" data-lang="en" data-url="http://seantunwin.github.io/chardelay.js" data-text="Chardelay.js - display content items with a delay">Tweet</a>
+                <script></script>
             </div>
             <div class="google">
                 <div class="g-plusone"></div>
+                <script></script>
             </div>
             <div class="linkdin">
                     <script type="IN/Share" data-counter="right"></script>
@@ -175,7 +177,7 @@
             <a href="https://twitter.com/seantunwin" class="contact-link"><span class="icon-twitter"></span></a>
             <a href="https://plus.google.com/u/0/106969786385489511025/posts" class="contact-link"><span class="icon-googleplus"></span></a>
             <a href="http://www.linkedin.com/in/seantunwin" class="contact-link"><span class="icon-linkedin"></span></a>
-            <a href="https://github.com/seantunwin" class="contact-link"><span class="icon-github"></span></a>
+            <a href="https://github.com/" class="contact-link"><span class="icon-github"></span></a>
         </nav>
         <p><span class="copyright">&copy;</span>2013 <a href="https://twitter.com/seantunwin" title="contact me on Twitter">Sean T. Unwin</a></p>
     </footer><!-- END Footer -->
