--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a class="github-ribbon" href="https://github.com/seantunwin/chardelay.js" target="_blank"><img src="https://s3.amazonaws.com/github/ribbons/forkme_left_gray_6d6d6d.png" alt="Fork me on GitHub"></a>
         <div class="social">
             <div class="twitter">
-                <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="seantunwin" data-lang="en" data-url="http://seantunwin.github.io/chardelay.js" data-text="Chardelay.js - display content items with a delay">Tweet</a>
+                <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="seantunwin" data-lang="en" data-url="http://seantunwin.github.io/chardelay.js" data-text="Chardelay.js - display content items with a delay"></a>
                 <script></script>
             </div>
             <div class="google">
