--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@
         <div class="social">
             <div class="twitter">
                 <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="seantunwin" data-lang="en" data-url="http://seantunwin.github.io/chardelay.js" data-text="Chardelay.js - display content items with a delay"></a>
-                <script></script>
+                <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+</script>
             </div>
             <div class="google">
                 <div class="g-plusone"></div>
-                <script></script>
+                <script>(function() { var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true; po.src = 'https://apis.google.com/js/plusone.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s); })();
+</script>
             </div>
             <div class="linkdin">
                     <script type="IN/Share" data-counter="right"></script>
@@ -187,7 +189,7 @@
     <script src="js/vendor/shCore.js" type="text/javascript"></script>
     <script src="js/vendor/shBrushes.min.js" type="text/javascript"></script>
 
-    <script src="js/main.js"></script>
+    <script src="js/main.min.js"></script>
     <script src="js/chardelay.min.js"></script>
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
