--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
             <a href="https://twitter.com/seantunwin" class="contact-link"><span class="icon-twitter"></span></a>
             <a href="https://plus.google.com/u/0/106969786385489511025/posts" class="contact-link"><span class="icon-googleplus"></span></a>
             <a href="http://www.linkedin.com/in/seantunwin" class="contact-link"><span class="icon-linkedin"></span></a>
-            <a href="https://github.com/" class="contact-link"><span class="icon-github"></span></a>
+            <a href="https://github.com/seantunwin" class="contact-link"><span class="icon-github"></span></a>
         </nav>
         <p><span class="copyright">&copy;</span>2013 <a href="https://twitter.com/seantunwin" title="contact me on Twitter">Sean T. Unwin</a></p>
     </footer><!-- END Footer -->
